# space

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/cli/: add.rs  config.rs  create.rs  go.rs  list.rs  mod.rs  remove.rs  repos.rs  status.rs
src/core/: config.rs  git.rs  mod.rs  repo.rs  workspace.rs
src/shell/: _space.zsh  completions.rs  mod.rs
src/tui/: app.rs  mod.rs  theme.rs  ui.rs
src/tui/screens/: add.rs  config.rs  create.rs  delete.rs  go.rs  mod.rs  search.rs
src/tui/widgets/: fuzzy_picker.rs  mod.rs
tests/: config_test.rs  git_test.rs  repo_test.rs  workspace_test.rs
