[package]
name = "space"
version = "0.1.0"
edition = "2021"
description = "Workspace manager for multi-repo git worktrees"
license = "MIT"
repository = "https://github.com/daderoode/space"
homepage = "https://github.com/daderoode/space"
readme = "README.md"

[[bin]]
name = "space"
path = "src/main.rs"

[lib]
name = "space"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
git2 = { version = "0.19", default-features = false }
nucleo = "0.5"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
indicatif = "0.17"
anyhow = "1"
dirs = "6"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
opt-level = 3
