[package]
name = "space"
version = "0.3.2"
edition = "2021"
description = "Workspace manager for multi-repo git worktrees"
license = "MIT"
repository = "https://github.com/daderoode/space"
homepage = "https://github.com/daderoode/space"
readme = "README.md"

[[bin]]
name = "space"
path = "src/main.rs"

[lib]
name = "space"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
colored = "3"
crossterm = "0.28"
git2 = { version = "0.19", default-features = false }
nucleo = "0.5"
ratatui = "0.30.0"
tui-input = "0.11"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
dirs = "6"
indicatif = "0.17"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
opt-level = 3
